fix too big width of logo

--- a/source/scss/partials/demo-notice.scss
+++ b/source/scss/partials/demo-notice.scss
@@ -26,13 +26,11 @@ $animation-offset: 5px;
     user-select: none;
   }
   &__logo {
-    height: 21px;
-    width: auto;
     margin-right: 10px;
 
     svg {
-      width: 100%;
-      height: 100%;
+      height: 21px;
+      width: auto;
     }
   }
   &__balance-logo {
@@ -43,9 +41,7 @@ $animation-offset: 5px;
     font-size: 18px;
   }
   &__link {
-    width: 100%;
-    height: 100%;
-    display: block;
+    display: inline-block;
     transform-origin: left center;
     transition: transform .15s ease-in-out;
   }
